--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
     <!-- About Section -->
      <section id="about">
         <h2>About Me</h2>
-        <p>I hold a Bachelor of Technology in Chemical Engineerring at Cape Peninsula University of Technology.I'm currently part of the 1 million developers for Africa programme at PLP as a student software developer learning web development and programming.Hello! I'm a highly motivated and detail-oriented individual with a strong background in chemical engineering and a growing passion for software development. I'm excited to apply my skills and knowledge to drive innovation and make a positive impact in the tech industry.</p>
+        <p>I hold a Bachelor of Technology in Chemical Engineering at Cape Peninsula University of Technology.I'm currently part of the 1 million developers for Africa programme at PLP as a student software developer learning web development and programming.I'm a highly motivated and detail-oriented individual with a strong background in chemical engineering and a growing passion for software development. I'm excited to apply my skills and knowledge to drive innovation and make a positive impact in the tech industry.</p>
     </section>
 
     <section id="skills">
